--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 :root {
     --primary-color: #debb9d;
     --secondary-color: #5a2800;
     --white-text: #fff
+}
+
+@font-face {
+    font-family: 'VT323';
+    src: url('/fonts/pixel-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
@@ -12,7 +21,12 @@ body {
     background-color: var(--primary-color);
 }
 
-.containter {
+.pixel-font {
+    font-family: 'VT323';
+    letter-spacing: 2px;
+}
+
+.container {
     display: flex;
     align-content: center;
     justify-content: center;
